--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,10 @@ ul,li {
 /* Project */
 .project-item {
     border: 2px solid #ddd;
+    opacity: 0.8;
+    cursor: pointer;
 }
+
 
 .project-img {
     width: 100%;
